# labwork5_cpp

./: README.md
lib/: CMakeLists.txt  ThreeDArray.cpp  ThreeDArray.h
tests/: CMakeLists.txt  ThreeDArray_test.cpp
